test/classes/initializers/generics/phase1/badDependence2.good
badDependence2.chpl:2: error: statement references variable 'f5' before it is defined
badDependence2.chpl:3: note: the variable 'f5' is defined here
